Remove elapsed value
